--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="text" id="password" placeholder="Enter password">
+                <input type="password" id="password" placeholder="Enter password">
                 <small>Error</small>
             </div>
             <div class="form-control">
                 <label for="password2">Confirm Password</label>
-                <input type="text" id="password2" placeholder="Enter Password Again">
+                <input type="password" id="password2" placeholder="Enter Password Again">
                 <small>Error</small>
             </div>
             <button>Submit</button>
